--- a/index.html
+++ b/index.html
@@ -3,8 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <style>
+        *{
+            margin: 0;
+            padding: 0;
+        }
+    </style>
 </head>
 <body>
-<p>hello world</p>
+
+    <h1>hello world</h1>
+    <p>I'm hosted with GitHub Pages</p>
+
 </body>
 </html>
