--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>正在翻墙的白城</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <style>
         *{
             margin: 0;
