--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>正在翻墙的白城</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link  href="/image/shortcut_icon.ico" rel="/favicon.ico">
+    <link  href="/image/shortcut_icon.ico" rel="shortcut icon">
     <style>
         *{
             margin: 0;
