--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>正在翻墙的白城</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link  href="/image/shortcut_icon.ico" rel="shortcut icon">
+    <link rel="shortcut icon" href="/shortcut_icon.ico">
     <style>
         *{
             margin: 0;
@@ -14,7 +14,7 @@
 </head>
 <body>
 
-    <p>很高兴遇到你，雪宝</p>
+    <p>很高兴遇到你s，雪宝</p>
     <p>我沈天航，喜欢你~~</p>
 
 </body>
