--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>正在翻墙的白城</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="/shortcut_icon.ico">
-
+    <link rel="stylesheet" href="Sass/reset.css">
 </head>
 <body>
 <ul>
