--- a/index.html
+++ b/index.html
@@ -6,17 +6,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="/shortcut_icon.ico">
     <link rel="stylesheet" href="Sass/reset.css">
+    <style>
+        h1{
+            font-size: 30px;
+            font-style: italic;
+        }
+    </style>
 </head>
 <body>
+<header id="header" class="header">
+    <h1>forever</h1>
+</header>
 <ul>
-    <li>Tsak13</li>
-    <li>Tsak14</li>
-    <li>Tsak15</li>
-    <li>Tsak16</li>
-    <li>Tsak17</li>
-    <li>Tsak18</li>
-    <li>Tsak18</li>
-    <li>Tsak20</li>
+    <!--<li>Tsak13</li>-->
+    <!--<li>Tsak14</li>-->
+    <!--<li>Tsak15</li>-->
+    <!--<li>Tsak16</li>-->
+    <!--<li>Tsak17</li>-->
+    <!--<li>Tsak18</li>-->
+    <!--<li>Tsak18</li>-->
+    <!--<li>Tsak20</li>-->
+
 </ul>
 
 </body>
